--- a/src/main/resources/templates/fragments/commons.html
+++ b/src/main/resources/templates/fragments/commons.html
@@ -1,56 +1,84 @@
 <!DOCTYPE html>
-<html lang="en" xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:th="http://www.thymeleaf.org"
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org"
       xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
+
 <head>
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>pazar.bg</title>
-    <link rel="stylesheet" href="/css/reset-css.css"/>
-    <link rel="stylesheet" href="/css/bootstrap.min.css"/>
+    <title>Pazar.bg</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+            crossorigin="anonymous"></script>
     <link rel="stylesheet" href="/css/style.css"/>
 </head>
+
 <body>
 <header>
     <nav class="navbar navbar-expand-lg bg-nav rounded ">
-        <a class="nav-link my-text-color active h5 " th:href="@{/}">
-            <img height="50px" src="/images/logo.png" alt="Pazar BG logo">
-        </a>
-        <a class="nav-link my-text-color active h5 " sec:authorize="isAuthenticated()" th:href="@{/home/offer-add}">Add
-            Offer</a>
+        <div class="container-fluid">
 
-        <div class="collapse navbar-collapse d-flex justify-content-end" id="navbarNav">
-            <ul class="navbar-nav row">
-                <li class="nav-item col-md-4">
-                    <a class="nav-link active h5 my-text-color" sec:authorize="!isAuthenticated()"
-                       th:href="@{/users/login}">Login</a>
-                </li>
+            <a class="navbar-brand" th:href="@{/}">
+                <img height="50px" src="/images/logo.png" alt="Pazar.bg logo">
+            </a>
 
-                <li class="nav-item col-md-4">
-                    <a class="nav-link my-text-color active h5 " sec:authorize="!isAuthenticated()"
-                       th:href="@{/users/register}">Register</a>
-                </li>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
 
-                <div class="nav-link h5 my-text-color" sec:authorize="isAuthenticated()">
-                    Welcome,
-                    <th:block sec:authentication="name"></th:block>
-                </div>
-                <li class="nav-item col-md-4" sec:authorize="isAuthenticated()">
-                    <form th:method="post"
-                          th:action="@{/users/logout}">
-                        <input type="submit" class="nav-link my-text-color h5 button-text-only" value="Logout"/>
-                    </form>
-                </li>
-            </ul>
+            <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
+
+                <ul class="navbar-nav">
+
+                    <li class="nav-item p-1" sec:authorize="!isAuthenticated()">
+                        <button class="btn btn-outline-warning shadow-sm">
+                            <a class="my-text-color no-link-underline"
+                               th:href="@{/users/login}">Login</a>
+                        </button>
+                    </li>
+
+                    <li class="nav-item p-1" sec:authorize="!isAuthenticated()">
+                        <button class="btn btn-outline-warning shadow-sm">
+                            <a class="my-text-color no-link-underline"
+                               th:href="@{/users/register}">Register</a>
+                        </button>
+                    </li>
+
+                    <li class="nav-item p-2" sec:authorize="isAuthenticated()">
+                        <span class="h4 my-text-color text-shadow-small">
+                            Welcome,
+                        <th:block sec:authentication="name"></th:block>
+                        </span>
+                    </li>
+
+                    <li class="nav-item p-1" sec:authorize="isAuthenticated()">
+                        <button class="btn btn-primary shadow-sm">
+                            <a class="no-link-underline text-white"
+                               th:href="@{/home/offer-add}">Add offer</a>
+                        </button>
+                    </li>
+
+                    <li class="nav-item p-1" sec:authorize="isAuthenticated()">
+                        <form th:method="post" th:action="@{/users/logout}">
+                            <input type="submit" class="btn btn-danger shadow-sm" value="Logout"/>
+                        </form>
+                    </li>
+                </ul>
+            </div>
         </div>
     </nav>
 </header>
+
 <footer class="footer bg-transparent  py-2">
     <div class="container-fluid text-center">
-        <div class="footer-background h5 my-text-color">
+        <div class="footer-background h5">
             &copy; Aleksandar Angelov 2023
         </div>
     </div>
 </footer>
 </body>
+
 </html>
