Added basic add offer UI and controller

--- a/src/main/resources/templates/fragments/commons.html
+++ b/src/main/resources/templates/fragments/commons.html
@@ -57,7 +57,7 @@
                     <li class="nav-item p-1" sec:authorize="isAuthenticated()">
                         <button class="btn btn-primary shadow-sm">
                             <a class="no-link-underline text-white"
-                               th:href="@{/home/offer-add}">Add offer</a>
+                               th:href="@{/offer/add}">Add offer</a>
                         </button>
                     </li>
 
