--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -36,6 +36,10 @@ textarea {
     resize: none;
 }
 
+main {
+    width: 100vw;
+}
+
 .img-thumb {
     padding: .25rem;
     background-color: #fff;
@@ -67,8 +71,68 @@ textarea {
     left: 0;
 }
 
+.text-fit-content {
+    width: fit-content;
+}
+
+.normal-font-weight {
+    font-weight: normal;
+}
+
+.category-btn {
+    width: fit-content;
+}
+
 .container{
     width: 90%;
+}
+
+.container-400 {
+    width: 400px;
+    height: 400px;
+}
+
+@media (max-width: 430px) {
+    .container-400 {
+        width: 90vw;
+        height: 90vw;
+    }
+}
+
+.offer {
+    width: fit-content;
+    max-width: 412px;
+    height: fit-content;
+    border: solid 2px black;
+    background-color: rgba(128, 128, 128, 0.55);
+}
+
+@media (max-width: 430px) {
+    .offer {
+        width: fit-content;
+        max-width: 95vw;
+        height: fit-content;
+        border: solid 2px black;
+        background-color: rgba(128, 128, 128, 0.55);
+    }
+}
+
+.offer-image {
+    max-width: 396px;
+    max-height: 396px;
+}
+
+@media (max-width: 430px) {
+    .offer-image {
+        max-width: calc(90vw - 4px);
+        max-height: calc(90vw - 4px);
+    }
+}
+
+.offer-image-container {
+    border: solid 2px black;
+    background-color: rgba(0, 0, 0, 0.7);
+    overflow: hidden;
 }
 
 .form-adaptive {
