--- a/src/main/resources/templates/manage-users.html
+++ b/src/main/resources/templates/manage-users.html
@@ -7,7 +7,7 @@
 <main class="p-4">
     <h1 class="text-center display-5"><span class="badge bg-secondary rounded-4 shadow mb-2">Manage users</span></h1>
     <div class="row">
-        <table th:each="user : ${users}" class="rounded-corners manage-users p-0 m-3">
+        <table th:each="user : ${users}" class="rounded-corners offer-style-table p-0 m-3">
             <tr>
                 <th class="h3">Username:</th>
                 <td class="h4 normal-font-weight text-break" th:text="${user.getUsername()}"></td>
