--- a/src/main/resources/templates/messages.html
+++ b/src/main/resources/templates/messages.html
@@ -4,20 +4,35 @@
 <head th:replace="~{fragments/commons::head}"></head>
 <body>
 <header th:replace="~{fragments/commons::nav}"></header>
-<main class="p-4">
+<main class="row p-4">
     <h1 class="text-center display-5"><span class="badge bg-secondary rounded-4 shadow mb-2">Messages</span></h1>
-    <table class="rounded-corners w-100">
+
+    <form class="width-fit-content py-2" th:each="message : ${messages}" th:action="@{/offer/reply/{id}(id=${message.getId()})}" th:method="POST">
+    <table class="rounded-corners offer-style-table">
         <tr>
-            <th class="h3">From:</th>
-            <th class="h3">Offer:</th>
-            <th class="h3">Message:</th>
+            <th class="h4">From:</th>
+            <td class="h4 normal-font-weight" th:text="${message.getFrom() + (message.isReply() ? ' (Seller)' : '')}"></td>
         </tr>
-        <tr th:each="message : ${messages}">
-            <td class="h4 normal-font-weight" th:text="${message.getFrom()}"></td>
+        <tr>
+            <th class="h4">Offer:</th>
             <td class="h4 normal-font-weight" th:text="${message.getOfferTitle()}"></td>
+        </tr>
+        <tr>
+            <th class="h4" th:text="${message.isReply() ? 'Reply:' : 'Message:'}"></th>
             <td class="text-break h4 normal-font-weight" th:text="${message.getContent()}"></td>
         </tr>
+        <tr th:unless="${message.isReply()}">
+            <th>
+                <div class="button-holder d-flex justify-content-center align-items-center">
+                    <button type="submit" class="btn btn-primary shadow">Reply to sender</button>
+                </div>
+            </th>
+            <td>
+                <textarea class="form-control" id="message" name="message"></textarea>
+            </td>
+        </tr>
     </table>
+    </form>
 </main>
 <footer th:replace="~{fragments/commons::footer}"></footer>
 </body>
