--- a/src/main/resources/templates/fragments/commons.html
+++ b/src/main/resources/templates/fragments/commons.html
@@ -71,7 +71,7 @@
                     <li class="nav-item p-1" sec:authorize="isAuthenticated()">
                         <button class="btn btn-primary shadow-sm">
                             <a class="no-link-underline text-white"
-                               th:href="@{/offer/add}">Add offer</a>
+                               th:href="@{/offers/add}">Add offer</a>
                         </button>
                     </li>
 
@@ -85,7 +85,7 @@
                     <li class="nav-item p-1" sec:authorize="isAuthenticated()">
                         <button class="btn btn-primary shadow-sm">
                             <a class="no-link-underline text-white"
-                               th:href="@{/home/messages}">Messages</a>
+                               th:href="@{/messages/view}">Messages</a>
                         </button>
                     </li>
 
