--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -11,11 +11,9 @@
 
         <p class="h4">
             Pazar.bg is an online marketplace for all kinds of goods. Here you can browse thousands of offers,
-            made by people all across Bulgaria. When you buy something, you can leave a comment on the offer's page, for other buyers to see.
-            In these comments tell people how satisfied you are with your purchase and potentially warn future buyers,
-            when there is something wrong. You can also send private messages to sellers, to ask for details on a given offer,
-            or to give feedback about your purchase.
-            You can also create offers and sell items you own.
+            uploaded by people all across Bulgaria. You can send private messages to sellers to ask for offer details
+            before buying, and the seller can reply. After you buy an offer, you can see it in the "Bought offers" page.
+            You can also upload your own offers for others to see and buy.
         </p>
         <hr class="my-3 mx-auto bg-white w-75"/>
 
