--- a/src/main/resources/templates/messages.html
+++ b/src/main/resources/templates/messages.html
@@ -7,7 +7,7 @@
 <main class="row p-4">
     <h1 class="text-center display-5"><span class="badge bg-secondary rounded-4 shadow mb-2">Messages</span></h1>
 
-    <form class="width-fit-content py-2" th:each="message : ${messages}" th:action="@{/offer/reply/{id}(id=${message.getId()})}" th:method="POST">
+    <form class="width-fit-content py-2" th:each="message : ${messages}" th:action="@{/messages/reply/{id}(id=${message.getId()})}" th:method="POST">
     <table class="rounded-corners offer-style-table">
         <tr>
             <th class="h4">From:</th>
