--- a/src/main/resources/templates/offer-add.html
+++ b/src/main/resources/templates/offer-add.html
@@ -10,7 +10,7 @@
 
     <form class="mx-auto w-25 bg-blur rounded-4 form-adaptive"
           th:method="POST"
-          th:action="@{/offer/add}"
+          th:action="@{/offers/add}"
           th:object="${addOfferBindingModel}"
           enctype="multipart/form-data">
 
@@ -29,7 +29,7 @@
                 <label for="description" class="h4 m-2">Description</label>
             </div>
             <textarea th:field="*{description}" th:value="${bindingModel != null ? bindingModel.description : ''}"
-                      th:errorclass="'is-invalid alert-danger'" type="text" class="form-control" id="description"
+                      th:errorclass="'is-invalid alert-danger'" class="form-control" id="description"
                       name="description"></textarea>
             <small th:if="${#fields.hasErrors('description')}"
                    th:errors="*{description}" class="text-danger">Description error message</small>
