--- a/src/main/resources/templates/offer-add.html
+++ b/src/main/resources/templates/offer-add.html
@@ -39,7 +39,7 @@
             <div class="label-holder text-white textCol d-flex justify-content-center">
                 <label for="price" class="h4 m-2">Price in BGN</label>
             </div>
-            <input th:field="*{price}" th:errorclass="'is-invalid alert-danger'" type="number" class="form-control"
+            <input th:field="*{price}" th:errorclass="'is-invalid alert-danger'" type="number" step="0.01" class="form-control"
                    id="price" name="price"/>
             <small th:if="${#fields.hasErrors('price')}"
                    th:errors="*{price}" class="text-danger">Price error message</small>
