Fix image css and error when offer has no images

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -122,8 +122,9 @@ main {
 }
 
 .offer-image {
-    max-width: 396px;
-    max-height: 396px;
+    width: 396px;
+    height: 396px;
+    object-fit: contain;
 }
 
 @media (max-width: 430px) {
